--- a/custom_components/crestron/manifest.json
+++ b/custom_components/crestron/manifest.json
@@ -3,7 +3,7 @@
   "name": "Crestron XSIG Integraton",
   "documentation": "https://github.com/npope/home-assistant-crestron-component/blob/master/README.md",
   "dependencies": [],
-  "codeowners": ["@npope"],
+  "codeowners": ["@bassrock"],
   "requirements": [],
-  "version": "0.2.4"
+  "version": "0.2.5"
 }
