--- a/custom_components/crestron/manifest.json
+++ b/custom_components/crestron/manifest.json
@@ -1,9 +1,9 @@
 {
   "domain": "crestron",
   "name": "Crestron XSIG Integraton",
-  "documentation": "https://github.com/npope/home-assistant-crestron-component/blob/master/README.md",
+  "documentation": "https://github.com/toscano/hass-crestron-xsig/blob/master/README.md",
   "dependencies": [],
-  "codeowners": ["@bassrock"],
+  "codeowners": ["@toscano", "@bassrock"],
   "requirements": [],
   "version": "0.2.5"
 }
